<resources>
    <string name="app_name">Sumission1</string>

    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="event_name">Event Name</string>
    <string name="event_banner">Event Banner</string>
    <string name="event_description">Event Description</string>
    <string name="event_title">Event Title</string>
    <string name="register">Register</string>
    <string name="organizer">Penyelenggara</string>
    <string name="date">Waktu</string>
    <string name="quota">Sisa Quota</string>
</resources>